# terje_respository

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  st_app.py
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml
common/: connectivity.py  data_queries.py
gui_pages/: auction_simulator.py  fiber_sdu_discounts.py  geo_tn_vula_arpu.py  gsmai_data_collector.py  page1.py  page2.py  ssb_report.py  test.py
